--- a/教學/sample/unitrade_Demo.ipynb
+++ b/教學/sample/unitrade_Demo.ipynb
@@ -1,30 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# 統一期貨unitradeAPI測試流程"
-      ],
       "metadata": {
         "id": "3iAlj31Epl30"
-      }
+      },
+      "source": [
+        "# 統一期貨unitradeAPI測試流程"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Vsx4F3rIpNEM"
+      },
       "source": [
         "# 事前準備\n",
         "\n",
@@ -46,22 +35,24 @@
         "*   須完成測試委託一筆，顯示「委託成功」即可，不用成交(測試環境也不會成交)\n",
         "*   「委託成功」完成後，請通知您的營業員，後續等待正式統一API開通信即可\n",
         "*   本份文件預設連線為「測試伺服器」若自行更改連線伺服器，須自行承擔交易內容\n"
-      ],
-      "metadata": {
-        "id": "Vsx4F3rIpNEM"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 輸入您的帳戶資料"
-      ],
       "metadata": {
         "id": "v9vdl3D7yoEt"
-      }
+      },
+      "source": [
+        "# 輸入您的帳戶資料"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CzQqUB9TyuON"
+      },
+      "outputs": [],
       "source": [
         "# 按 Shift + Enter 執行程式碼 或 按左邊按鈕執行程式碼\n",
         "\n",
@@ -82,22 +73,17 @@
         "\n",
         "CA_PSW_KEY = \"請在此輸入憑證密碼\"\n",
         "#============================================================#"
-      ],
-      "metadata": {
-        "id": "CzQqUB9TyuON"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "D8o5Sf9jyHYl"
+      },
       "source": [
         "\n",
         "# 安裝套件"
-      ],
-      "metadata": {
-        "id": "D8o5Sf9jyHYl"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -113,15 +99,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 初始化設定"
-      ],
       "metadata": {
         "id": "4DuK6Z7s1m7N"
-      }
+      },
+      "source": [
+        "# 初始化設定"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nVyuJjXu1lz5"
+      },
+      "outputs": [],
       "source": [
         "import unitrade\n",
         "import pandas as pd\n",
@@ -203,24 +194,24 @@
         "api.dtrade.on_reply=on_reply\n",
         "api.dtrade.on_match=on_match\n",
         "print('訂閱完畢')"
-      ],
-      "metadata": {
-        "id": "nVyuJjXu1lz5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 期貨測試下單"
-      ],
       "metadata": {
         "id": "91_ns_Wh2hIt"
-      }
+      },
+      "source": [
+        "# 期貨測試下單"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zXaFNJBa2nJ3"
+      },
+      "outputs": [],
       "source": [
         "#系統登入\n",
         "\n",
@@ -260,23 +251,32 @@
         "api.logout()\n",
         "print('登出完畢')\n",
         "print(f\"登入旗標{api.login_status_flag}\")"
-      ],
-      "metadata": {
-        "id": "zXaFNJBa2nJ3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5xKUA9is4Xcm"
+      },
       "source": [
         "# 首次登入需較久時間，請耐心等候\n",
         "# 顯示「委託成功」即完成丟單測試\n",
         "# 請通知您的營業員，完成後續正式API開通"
-      ],
-      "metadata": {
-        "id": "5xKUA9is4Xcm"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
