--- a/教學/sample/外期行情範例.ipynb
+++ b/教學/sample/外期行情範例.ipynb
@@ -205,9 +205,8 @@
         "#錯誤事件處理\n",
         "api.on_error = lambda error: print(f'api錯誤 {error}')\n",
         "#系統登入\n",
-        "#loginresponse = api.login(\n",
-        "    #\"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
-        "loginresponse = api.login(\"http://test167.pfctrade.com\", \"80009809769\", \"Aa123456\", 'PSC_A226097195_20250310.pfx', '12345678')\n",
+        "loginresponse = api.login(\n",
+        "    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼 \n",
         "\n",
         "#顯示登入結果\n",
         "print(loginresponse)\n",
