--- a/教學/sample/現貨行情範例.ipynb
+++ b/教學/sample/現貨行情範例.ipynb
@@ -219,9 +219,9 @@
         "#錯誤事件處理\n",
         "api.on_error = lambda error: print(f'api錯誤 {error}')\n",
         "#系統登入\n",
-        "#loginresponse = api.login(\n",
-        "#    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
-        "loginresponse = api.login( \"url\", \"帳號\", \"密碼\", '', '')\n",
+        "loginresponse = api.login(\n",
+        "    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
+        "\n",
         "\n",
         "#顯示登入結果\n",
         "print(loginresponse)\n",
