--- a/教學/商品查詢.md
+++ b/教學/商品查詢.md
@@ -3,7 +3,7 @@ layout: default
 title: 商品查詢
 nav_order: 0
 parent: 教學
-permalink: /教學/商品查詢
+permalink: /教學/商品查詢/
 --- 
 
 {: .note }
@@ -14,6 +14,8 @@ permalink: /教學/商品查詢
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%95%86%E5%93%81%E5%8F%96%E5%BE%97%E7%AF%84%E4%BE%8B.ipynb)
 
+
+> <a href="../sample/商品取得範例.ipynb" download>下載範例</a> 
 
 ## 內期商品查詢
 
