--- a/教學/外期下單.md
+++ b/教學/外期下單.md
@@ -3,7 +3,7 @@ layout: default
 title: 外期下單
 nav_order: 4
 parent: 教學
-permalink: /教學/外期下單
+permalink: /教學/外期下單/
 ---  
 {: .note }
 > 操作功能前請先登入
@@ -13,6 +13,7 @@ permalink: /教學/外期下單
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%A4%96%E6%9C%9F%E5%A7%94%E8%A8%97%E7%AF%84%E4%BE%8B.ipynb)
 
+> <a href="../sample/外期委託範例.ipynb" download>下載範例</a> 
 
 ## 訂閱回報接收
 請先訂閱 [委回事件 (on_reply)]({{ "/API/ftrade#on_reply" | relative_url }}) 以及 [成回事件 (on_match)]({{ "/API/ftrade#on_match" | relative_url }})，這兩個事件分別用於監聽訂單回覆及成交回報。
