--- a/教學/外期帳務.md
+++ b/教學/外期帳務.md
@@ -3,7 +3,7 @@ layout: default
 title: 外期帳務
 nav_order: 6
 parent: 教學
-permalink: /教學/外期帳務
+permalink: /教學/外期帳務/
 --- 
 {: .note }
 > 操作功能前請先登入
@@ -12,7 +12,8 @@ permalink: /教學/外期帳務
 
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%A4%96%E6%9C%9F%E5%B8%B3%E5%8B%99%E7%AF%84%E4%BE%8B.ipynb)
-
+ 
+> <a href="../sample/外期帳務範例.ipynb" download>下載範例</a> 
 
 ## 保證金查詢
 使用 faccount.[get_margin]({{ "/API/faccount#FAccount.get_margin" | relative_url }}) 方法查詢指定帳號的保證金。這個方法需要兩個參數：帳號和幣別。
