--- a/教學/現貨行情.md
+++ b/教學/現貨行情.md
@@ -3,7 +3,7 @@ layout: default
 title: 現貨行情
 nav_order: 8
 parent: 教學
-permalink: /教學/現貨行情
+permalink: /教學/現貨行情/
 --- 
 {: .note }
 > 操作功能前請先登入
@@ -12,8 +12,9 @@ permalink: /教學/現貨行情
   
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E7%8F%BE%E8%B2%A8%E8%A1%8C%E6%83%85%E7%AF%84%E4%BE%8B.ipynb)
-
  
+> <a href="../sample/現貨行情範例.ipynb" download>下載範例</a> 
+
 
 <div class="markdown-google-sans">
 
