--- a/教學/連線狀態.md
+++ b/教學/連線狀態.md
@@ -3,7 +3,7 @@ layout: default
 title: 連線狀態
 nav_order: 7
 parent: 教學
-permalink: /教學/連線狀態
+permalink: /教學/連線狀態/
 --- 
 {: .note }
 > 操作功能前請先登入
@@ -12,6 +12,8 @@ permalink: /教學/連線狀態
 
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E9%80%A3%E7%B7%9A%E7%8B%80%E6%85%8B%E7%AF%84%E4%BE%8B.ipynb)
+
+> <a href="../sample/連線狀態範例.ipynb" download>下載範例</a> 
 
 ```python
 ##API初始&登入
