--- a/教學/內期下單.md
+++ b/教學/內期下單.md
@@ -3,7 +3,7 @@ layout: default
 title: 內期下單
 nav_order: 1
 parent: 教學
-permalink: /教學/內期下單
+permalink: /教學/內期下單/
 --- 
 {: .note }
 > 操作功能前請先登入
@@ -12,7 +12,8 @@ permalink: /教學/內期下單
  
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%85%A7%E6%9C%9F%E5%A7%94%E8%A8%97%E7%AF%84%E4%BE%8B.ipynb)
-
+ 
+> <a href="../sample/內期委託範例.ipynb" download>下載範例</a>
 
 ## 訂閱委託回報事件
 請先訂閱 [委回事件 (on_reply)]({{ "/API/dtrade#on_reply" | relative_url }}) 以及 [成回事件 (on_match)]({{ "/API/dtrade#on_match" | relative_url }})，這兩個事件分別用於監聽訂單回覆及成交回報。
