--- a/教學/外期行情.md
+++ b/教學/外期行情.md
@@ -3,7 +3,7 @@ layout: default
 title: 外期行情
 nav_order: 5
 parent: 教學
-permalink: /教學/外期行情
+permalink: /教學/外期行情/
 ---  
 {: .note }
 > 操作功能前請先登入
@@ -13,6 +13,7 @@ permalink: /教學/外期行情
 [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%A4%96%E6%9C%9F%E8%A1%8C%E6%83%85%E7%AF%84%E4%BE%8B.ipynb)
 
+> <a href="../sample/外期行情範例.ipynb" download>下載範例</a> 
 
 ## 查詢成交和最佳買賣價
 透過 `fquote` 物件中的 [query_tick_data_trade]({{ "/API/fquote#query_tick_data_trade" | relative_url }}) 方法查詢最後成交價。 
